--- a/angular.json
+++ b/angular.json
@@ -23,9 +23,7 @@
             "polyfills": "src/polyfills.ts",
             "tsConfig": "src/tsconfig.app.json",
             "assets": [
-              "src/favicon.ico",
-              "src/assets",
-              "src/manifest.json"
+              "src/assets"
             ],
             "styles": [
               "src/styles.scss",
@@ -98,7 +96,6 @@
             "scripts": [
             ],
             "assets": [
-              "src/favicon.ico",
               "src/assets"
             ]
           }
